# restapi/operations/jtree_metadata_api.go
@@ -1,3 +1,5 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
 package operations
 
 // This file was generated by the swagger tool.
@@ -60,14 +62,11 @@ func NewJtreeMetadataAPI(spec *loads.Document) *JtreeMetadataAPI {
 		GetSamplesByQueryHandler: GetSamplesByQueryHandlerFunc(func(params GetSamplesByQueryParams) middleware.Responder {
 			return middleware.NotImplemented("operation GetSamplesByQuery has not yet been implemented")
 		}),
-		GetSearchableHandler: GetSearchableHandlerFunc(func(params GetSearchableParams) middleware.Responder {
-			return middleware.NotImplemented("operation GetSearchable has not yet been implemented")
-		}),
-		GetUneditableHandler: GetUneditableHandlerFunc(func(params GetUneditableParams) middleware.Responder {
-			return middleware.NotImplemented("operation GetUneditable has not yet been implemented")
-		}),
 		LogoutHandler: LogoutHandlerFunc(func(params LogoutParams) middleware.Responder {
 			return middleware.NotImplemented("operation Logout has not yet been implemented")
+		}),
+		UpdatePatientHandler: UpdatePatientHandlerFunc(func(params UpdatePatientParams) middleware.Responder {
+			return middleware.NotImplemented("operation UpdatePatient has not yet been implemented")
 		}),
 	}
 }
@@ -85,13 +84,13 @@ type JtreeMetadataAPI struct {
 	Middleware      func(middleware.Builder) http.Handler
 
 	// BasicAuthenticator generates a runtime.Authenticator from the supplied basic auth function.
-	// It has a default implemention in the security package, however you can replace it for your particular usage.
+	// It has a default implementation in the security package, however you can replace it for your particular usage.
 	BasicAuthenticator func(security.UserPassAuthentication) runtime.Authenticator
 	// APIKeyAuthenticator generates a runtime.Authenticator from the supplied token auth function.
-	// It has a default implemention in the security package, however you can replace it for your particular usage.
+	// It has a default implementation in the security package, however you can replace it for your particular usage.
 	APIKeyAuthenticator func(string, string, security.TokenAuthentication) runtime.Authenticator
 	// BearerAuthenticator generates a runtime.Authenticator from the supplied bearer token auth function.
-	// It has a default implemention in the security package, however you can replace it for your particular usage.
+	// It has a default implementation in the security package, however you can replace it for your particular usage.
 	BearerAuthenticator func(string, security.ScopedTokenAuthentication) runtime.Authenticator
 
 	// JSONConsumer registers a consumer for a "application/json" mime type
@@ -101,6 +100,7 @@ type JtreeMetadataAPI struct {
 
 	// JSONProducer registers a producer for a "application/json" mime type
 	JSONProducer runtime.Producer
+
 	// PostUploadHandler sets the operation handler for the post upload operation
 	PostUploadHandler PostUploadHandler
 	// AddExperimentHandler sets the operation handler for the add experiment operation
@@ -123,6 +123,8 @@ type JtreeMetadataAPI struct {
 	GetUneditableHandler GetUneditableHandler
 	// LogoutHandler sets the operation handler for the logout operation
 	LogoutHandler LogoutHandler
+	// UpdatePatientHandler sets the operation handler for the update patient operation
+	UpdatePatientHandler UpdatePatientHandler
 
 	// ServeError is called when an error is received, there is a default handler
 	// but you can set your own with this
@@ -182,9 +184,14 @@ func (o *JtreeMetadataAPI) Validate() error {
 		unregistered = append(unregistered, "JSONConsumer")
 	}
 
+	if o.MultipartformConsumer == nil {
+		unregistered = append(unregistered, "MultipartformConsumer")
+	}
+
 	if o.JSONProducer == nil {
 		unregistered = append(unregistered, "JSONProducer")
 	}
+
 	if o.PostUploadHandler == nil {
 		unregistered = append(unregistered, "PostUploadHandler")
 	}
@@ -217,16 +224,12 @@ func (o *JtreeMetadataAPI) Validate() error {
 		unregistered = append(unregistered, "GetSamplesByQueryHandler")
 	}
 
-	if o.GetSearchableHandler == nil {
-		unregistered = append(unregistered, "GetSearchableHandler")
-	}
-
-	if o.GetUneditableHandler == nil {
-		unregistered = append(unregistered, "GetUneditableHandler")
-	}
-
 	if o.LogoutHandler == nil {
 		unregistered = append(unregistered, "LogoutHandler")
+	}
+
+	if o.UpdatePatientHandler == nil {
+		unregistered = append(unregistered, "UpdatePatientHandler")
 	}
 
 	if len(unregistered) > 0 {
@@ -264,6 +267,7 @@ func (o *JtreeMetadataAPI) ConsumersFor(mediaTypes []string) map[string]runtime.
 
 		case "application/json":
 			result["application/json"] = o.JSONConsumer
+
 		case "multipart/form-data":
 			result["multipart/form-data"] = o.MultipartformConsumer
 
@@ -372,17 +376,12 @@ func (o *JtreeMetadataAPI) initHandlerCache() {
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
-	o.handlers["GET"]["/searchable"] = NewGetSearchable(o.context, o.GetSearchableHandler)
-
-	if o.handlers["GET"] == nil {
-		o.handlers["GET"] = make(map[string]http.Handler)
-	}
-	o.handlers["GET"]["/uneditable"] = NewGetUneditable(o.context, o.GetUneditableHandler)
-
-	if o.handlers["GET"] == nil {
-		o.handlers["GET"] = make(map[string]http.Handler)
-	}
 	o.handlers["GET"]["/logout"] = NewLogout(o.context, o.LogoutHandler)
+
+	if o.handlers["PUT"] == nil {
+		o.handlers["PUT"] = make(map[string]http.Handler)
+	}
+	o.handlers["PUT"]["/patient"] = NewUpdatePatient(o.context, o.UpdatePatientHandler)
 
 }
 
